fable/test/syntax_error/sub_percent_3.f
      subroutine sub % 3
      end
